# bulloh

./: .flake8  .gitignore  LICENSE  README.md  config.py  lambda_function.py  main.py  pyproject.toml  requirements.txt
.github/scripts/: increment_version.py
.github/workflows/: cd.yml
controllers/: aws_controller.py  bulloh_controller.py  general_utilities.py  google_api_controller.py  notion_controller.py  postgres_controller.py  rescuetime_controller.py
controllers/notion/: notion_api.py  notion_controller.py
controllers/ticktick/: ticktick_api.py  ticktick_controller.py
data/constants/: habits.py  habits_time.py  metrics.py  row_identifier.py  ticktick_ids.py  time_metrics.py
data/data_models/: postgres_data_models.py
data/payloads/: notion_payloads.py  postgres_queries.py
data/tasks/: task_data.py  task_notion_parameters.py
src/bulloh/: __init__.py  bulloh.py  health_connect_client.py  rescuetime_client.py  s3_client.py
tests/: test_bulloh.py  test_google_api.py  test_notion.py  test_rescuetime.py  test_rescuetime_client.py  tests_rescuetime.py
utilities/: general_utilities.py  habit_utilities.py  utilities.py
