[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/anggelomos/bulloh"

[tool.setuptools.package-data]
nothion = ["py.typed"]

[project]
name = "bulloh"
version = "0.1.0"
description = "Script to automate gathering personal productivity data."
readme = "README.md"
authors = [{name = "anggelomos", email = "anggelomos@outlook.com"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "tickthon>=0.2.9",
    "nothion",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "twine",
    "flake8",
    "mypy",
    "types-requests"
]